# picture_viewer

./: .gitignore  CMakeLists.txt  test.html
src/: function.cpp  function.h  ico.rc  main.cpp  my_qrc.qrc
src/some_function/: Item_Interface.cpp  Item_Interface.h  Pic_Thread.cpp  Pic_Thread.h  my_Qtreewidget.cpp  my_Qtreewidget.h  my_photo_Graphics.cpp  my_photo_Graphics.h
src/ui/qss/: MacOS.qss  main.ui
src/ui/ui_file/: Qtree_ui.h  Qtree_ui.ui
